fix phpunit version constraints
Signed-off-by: Eric Villard <dev@eviweb.fr>

--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
             "role": "developer"
         }
     ],
-    "require": {},
+    "require": {
+        "phpunit/phpunit": ">=7 <9"
+    },
     "require-dev": {
-        "phpunit/phpunit": ">=7"
     },
     "autoload": {
         "psr-4": {
