--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "phpunit/phpunit": ">=7 <9"
+        "phpunit/phpunit": ">=9"
     },
     "require-dev": {
     },
@@ -31,7 +31,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.2.x-dev"
+            "dev-master": "0.3.x-dev"
         }
     },
     "minimum-stability": "dev",
